--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
 		"rollup-plugin-svg": "^2.0.0",
 		"rollup-plugin-terser": "^7.0.2",
 		"shelljs": "^0.8.4",
+		"simple-svelte-autocomplete": "^1.2.4",
 		"sirv-cli": "^1.0.8",
 		"svelte": "^3.29.7",
+		"svelte-autocomplete": "0.0.4",
 		"svelte-preprocess": "^4.6.0"
 	},
 	"scripts": {
